# link_rustler

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yaml  release.yaml
src/: common.rs  config.rs  disc_op.rs  driver.rs  enums.rs  main.rs  pdf.rs  report.rs  structs.rs  update.rs  utilities.rs
ui/: common.slint  globals.slint  mainwindow.slint  settings.slint  update.slint
