[package]
name = "link_rustler"
version = "0.2.3"
edition = "2021"
authors = ["ChaseCares"]

[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["now"] }
clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
self_update = { version = "0.41.0", features = [
    "archive-tar",
    "compression-flate2",
] }


blake2 = "0.10.6"
image = "0.25.1"
image_hasher = "2.0.0"
regex = "1.10.5"
reqwest = "0.12.5"
serde_json = "1.0.120"
thirtyfour = "0.31.0"
flate2 = "1.0.30"
html-builder = "0.5.1"
toml = "0.8.14"
humantime-serde = "1.1.1"
anyhow = "1.0.86"
open = "5.2.0"
tracing = "0.1.40"
tar = "0.4.41"
slint = "1.6.0"

[build-dependencies]
slint-build = "1.6.0"

[profile.release]
debug = 0
