[package]
name = "link_rustler"
version = "0.2.7"
edition = "2021"
authors = ["ChaseCares"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4", features = ["now"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
self_update = { version = "0.41", features = [
    "archive-tar",
    "compression-flate2",
] }


blake2 = "0.10"
image = "0.25"
image_hasher = "2.0"
regex = "1.10"
reqwest = "0.12"
serde_json = "1.0"
thirtyfour = "0.31"
flate2 = "1.0"
html-builder = "0.5"
toml = "0.8"
humantime-serde = "1.1"
anyhow = "1.0"
open = "5.2"
tracing = "0.1"
tar = "0.4"
slint = "1.6"
directories = "5.0"
tracing-appender = "0.2"

[build-dependencies]
slint-build = "1.6"

[profile.release]
debug = 0
